fix buttons being weird on mobile

--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,16 +1,11 @@
 .button-container {
-    display:grid;
-    align-items: center;
-    grid-template-columns:repeat(5, 150px);
-    grid-column-gap:10px;
-    grid-row-gap:10px;
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+  }
+  .button-container>* {
+    flex:1 1 150px;
   }
   
-  .button-container>div {
-    width: 100px;
-    margin: 10px;
-    text-align: center;
-    line-height: 75px;
-    font-size: 30px;
-    padding: 2%;
-  }
